Setup flow improved. Also added some fixes to look & feel and components refactor
